# robotics-fall-2015

./: .gitmodules  CMakeLists.txt  README.md  angles.py  baxter.py  convert_notes.py  deck.txt  demo3.py  getangles.m  getangles.py  jingle.txt  logtr.py  lol.py  package.json  package.xml  play_sound.sh  resolved-rates.py  run-sim.py  simulate.py  test.py  twink.txt  update_subs.sh  util.py
arduino/keyboard/: keyboard.ino  pitches.h
sound/: get_notes_and_play.py  play.js
